# duplicate-finder

./: .flake8  .gitignore  LICENSE  README.md  find_duplicates.py  mypy.ini  pyproject.toml  requirements-dev.txt
.github/workflows/: pytest.yml  release.yml
TEST_DIR/: test_file1.txt
duplicate_finder/: __main__.py  cli_args.py  duplicate_finder.py  duplicate_finder_config.py  finder.py  utils.py
tests/: test_cli.py  test_duplicate_finder.py  test_duplicate_finder_config.py  test_finder.py  test_utils.py
workflows/: pytest.yml
